Fixed alignment on professional page

--- a/professional/professional.css
+++ b/professional/professional.css
@@ -117,7 +117,7 @@ body {
 .prof-nav
 {
     padding-top: 10vh;
-    width: 50%;
+    width: 40%;
     float: right;
     font-family: "Alegreya Sans SC", sans-serif;
     text-align: center;
